--- a/kubernetes/apps/default/homepage/app/helmrelease.yaml
+++ b/kubernetes/apps/default/homepage/app/helmrelease.yaml
@@ -36,9 +36,9 @@ spec:
               tag: v0.9.9
             env:
               TZ: ${CONFIG_TIMEZONE}
-            # envFrom:
-            #   - secretRef:
-            #       name: homepage-secret
+            envFrom:
+              - secretRef:
+                  name: homepage-secret
             resources:
               requests:
                 cpu: 15m
