--- a/kubernetes/apps/default/kavita/app/helmrelease.yaml
+++ b/kubernetes/apps/default/kavita/app/helmrelease.yaml
@@ -4,7 +4,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: &app kavita
-  namespace: media
+  namespace: default
 spec:
   interval: 5m
   chart:
