--- a/kubernetes/apps/default/kavita/ks.yaml
+++ b/kubernetes/apps/default/kavita/ks.yaml
@@ -10,7 +10,7 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  targetNamespace: media
+  targetNamespace: default
   prune: true
   sourceRef:
     kind: GitRepository
