--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - ./bazarr/ks.yaml
   - ./homepage/ks.yaml
   - ./kavita/ks.yaml
-  - ./lazylibrarian/ks.yaml
+#  - ./lazylibrarian/ks.yaml
   - ./overseerr/ks.yaml
   - ./pgadmin/ks.yaml
   - ./plex/ks.yaml
