--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -72,6 +72,16 @@
       },
       "separateMinorPatch": true
     },
+    {
+      "description": ["Rook-Ceph Group"],
+      "groupName": "Rook-Ceph",
+      "matchPackagePatterns": ["rook.ceph"],
+      "matchDatasources": ["helm"],
+      "group": {
+        "commitMessageTopic": "{{{groupName}}} group"
+      },
+      "separateMinorPatch": true
+    },
     // commit message topics
     {
       "matchDatasources": ["helm"],
