--- a/kubernetes/apps/default/ollama/app/helmrelease.yaml
+++ b/kubernetes/apps/default/ollama/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
           main:
             image:
               repository: docker.io/ollama/ollama
-              tag: 0.3.14
+              tag: 0.3.14-rocm
             env:
               TZ: ${CONFIG_TIMEZONE}
               HSA_OVERRIDE_GFX_VERSION: 11.0.0
