--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./namespace.yaml
   # Apps
   - ./bazarr/ks.yaml
+  - ./hoarder/ks.yaml
   - ./homepage/ks.yaml
   - ./kavita/ks.yaml
 #  - ./lazylibrarian/ks.yaml
