--- a/kubernetes/apps/default/hoarder/ks.yaml
+++ b/kubernetes/apps/default/hoarder/ks.yaml
@@ -6,7 +6,7 @@ metadata:
   name: &app hoarder
   namespace: flux-system
 spec:
-  targetNamespace: selfhosted
+  targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
