--- a/kubernetes/apps/default/hoarder/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hoarder/app/helmrelease.yaml
@@ -59,8 +59,9 @@ spec:
             resources:
               requests:
                 cpu: 10m
-              limits:
                 memory: 128Mi
+              limits:
+                memory: 512Mi
           chrome:
             securityContext:
               runAsUser: 0
