--- a/.taskfiles/VolSync/templates/replicationdestination.tmpl.yaml
+++ b/.taskfiles/VolSync/templates/replicationdestination.tmpl.yaml
@@ -8,7 +8,7 @@ spec:
   trigger:
     manual: restore-once
   restic:
-    repository: "${app}-volsync-r2"
+    repository: "${app}-volsync-r2-secret"
     destinationPVC: "${claim}"
     copyMethod: Direct
     storageClassName: syno-iscsi-delete
