--- a/kubernetes/moria/apps/network/ingress-nginx/external/helmrelease.yaml
+++ b/kubernetes/moria/apps/network/ingress-nginx/external/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
         annotations:
           external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
           io.cilium/lb-ipam-ips: "192.168.135.2"
-        externalTrafficPolicy: Local
+        externalTrafficPolicy: Cluster
       ingressClassResource:
         name: external
         default: false
