--- a/kubernetes/moria/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/moria/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
       service:
         annotations:
           io.cilium/lb-ipam-ips: "192.168.135.3"
-        externalTrafficPolicy: Local
+        externalTrafficPolicy: Cluster
       ingressClassResource:
         name: internal
         default: true
