--- a/kubernetes/moria/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/moria/apps/kube-system/cilium/app/helm-values.yaml
@@ -32,7 +32,7 @@ l2announcements:
   enabled: false # https://github.com/cilium/cilium/issues/28985
 loadBalancer:
   algorithm: maglev
-  mode: snat
+  mode: dsr
 localRedirectPolicy: true
 operator:
   replicas: 1
