--- a/kubernetes/moria/apps/default/valheim/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/valheim/app/helmrelease.yaml
@@ -38,10 +38,10 @@ spec:
       valheim:
         annotations:
           reloader.stakater.com/search: "true"
-        pod:
-          nodeSelector:
+        # pod:
+          # nodeSelector:
             # feature.node.kubernetes.io/cpu-model.id: "116" # AMD Ryzen
-            feature.node.kubernetes.io/cpu-model.vendor_id: AMD
+            # feature.node.kubernetes.io/cpu-model.vendor_id: AMD
             # kubernetes.io/hostname:: "radon"
         containers:
           app:
