--- a/kubernetes/moria/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/moria/apps/default/plex/app/helmrelease.yaml
@@ -77,8 +77,8 @@ spec:
                 memory: 9248M
 
     defaultPodOptions:
-      nodeSelector:
-        feature.node.kubernetes.io/cpu-model.vendor_id: Intel
+      #nodeSelector:
+        # feature.node.kubernetes.io/cpu-model.vendor_id: Intel
         # intel.feature.node.kubernetes.io/gpu: "true"
       securityContext:
         runAsUser: 568
