--- a/kubernetes/moria/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/moria/flux/repositories/helm/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ./coredns.yaml
   - ./external-dns.yaml
   - ./external-secrets.yaml
+  - ./fairwinds.yaml
   - ./grafana.yaml
   - ./ingress-nginx.yaml
   - ./intel.yaml
