--- a/kubernetes/moria/apps/observability/goldilocks/app/helmrelease-goldilocks.yaml
+++ b/kubernetes/moria/apps/observability/goldilocks/app/helmrelease-goldilocks.yaml
@@ -63,6 +63,7 @@ spec:
           gethomepage.dev/icon: "https://raw.githubusercontent.com/FairwindsOps/goldilocks/master/pkg/dashboard/assets/images/favicon.ico"
           gethomepage.dev/description: "A utility to help identify a starting point for resource requests and limits."
           gethomepage.dev/href: "https://goldilocks.${SECRET_DOMAIN}"
+          gethomepage.dev/pod-selector: app.kubernetes.io/name=goldilocks
         hosts:
           - host: &host "goldilocks.${SECRET_DOMAIN}"
             paths:
