--- a/kubernetes/moria/apps/default/kustomization.yaml
+++ b/kubernetes/moria/apps/default/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
 # borked during csi migration
 #  - ./librechat/ks.yaml
 #  - ./n8n/ks.yaml
-#  - ./ollama/ks.yaml
+  - ./open-webui/ks.yaml
   - ./overseerr/ks.yaml
   - ./pgadmin/ks.yaml
   - ./plex/ks.yaml
